Build hpc with Cabal

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -3,13 +3,13 @@ include $(TOP)/mk/boilerplate.mk
 
 ifeq "$(DOING_BIN_DIST)" "YES"
 # We're doing a binary-dist, descend into a subset of the dirs.
-SUBDIRS = mkdirhier hp2ps parallel unlit hpc pwd
+SUBDIRS = mkdirhier hp2ps parallel unlit pwd
 else
 ifeq "$(BootingFromHc)" "YES"
 SUBDIRS = mkdependC mkdirhier runstdtest genapply genprimopcode unlit
 else
 SUBDIRS = mkdependC mkdirhier runstdtest hp2ps \
-	  parallel unlit genprimopcode genapply hpc pwd
+	  parallel unlit genprimopcode genapply pwd
 endif
 ifneq "$(TARGETPLATFORM)" "i386-unknown-mingw32"
 # lndir doesn't build on Windows
@@ -53,9 +53,9 @@ boot ::
 	$(MAKE) -C genprimopcode
 endif
 
-WITH_BOOTSTRAPPING_COMPILER = installPackage ghc-pkg hsc2hs
+WITH_BOOTSTRAPPING_COMPILER = installPackage ghc-pkg hsc2hs hpc
 
-WITH_STAGE1 = installPackage ghc-pkg hasktags runghc
+WITH_STAGE1 = installPackage ghc-pkg hasktags runghc hpc
 ifneq "$(NO_INSTALL_HSC2HS)" "YES"
 WITH_STAGE1 += hsc2hs
 endif
