Explicitly list HpcParser as a module in hpc-bin Cabal doesn't preprocess the .y file otherwise.

--- a/utils/hpc/hpc-bin.cabal
+++ b/utils/hpc/hpc-bin.cabal
@@ -18,6 +18,7 @@ Flag base3
 
 Executable hpc
     Main-Is: Hpc.hs
+    Other-Modules: HpcParser
     if flag(base3)
         Build-Depends: base       >= 3   && < 4,
                        directory  >= 1   && < 1.1,
