--- a/driver/Makefile
+++ b/driver/Makefile
@@ -17,9 +17,9 @@ INPLACE_FILE     = $(INPLACE_DATA_DIR)/inplace
 boot all ::
 	$(MKDIRHIER) $(INPLACE_DATA_DIR)
 	test -e $(INPLACE_PKG_CONF) || echo "[]" > $(INPLACE_PKG_CONF)
+	echo "[]" > package.conf
 	touch $(INPLACE_FILE)
 
-override datadir = $(libdir)
 INSTALL_DATAS += package.conf ghc-usage.txt ghci-usage.txt
 
 # Since cleaning effectively uninstalls all the packages, we must 
