runghc now uses the compiler that it comes with; fixes trac #1281 rather than the first one that it finds on the PATH

--- a/utils/runghc/runghc.cabal
+++ b/utils/runghc/runghc.cabal
@@ -25,4 +25,5 @@ Executable runghc
                        process    >= 1   && < 1.1
     else
         Build-Depends: base < 3
+    Build-Depends: filepath
 
