move an inline function to keep older versions of gcc happy no idea why this only just showed up...

--- a/rts/Makefile
+++ b/rts/Makefile
@@ -161,6 +161,12 @@ ifeq "$(UseLibFFIForAdjustors)" "YES"
 SRC_CC_OPTS += -DUSE_LIBFFI_FOR_ADJUSTORS
 endif
 
+ifeq "$(Windows)" "YES"
+# SDM: when compiled with -fasm the RTS currently has bogus references to 
+# __imp_base_ things, so working around for now:
+SRC_HC_OPTS = -fvia-C
+endif
+
 ifneq "$(DYNAMIC_RTS)" "YES"
 SRC_HC_OPTS += -static
 else
