--- a/compiler/ghc.cabal
+++ b/compiler/ghc.cabal
@@ -95,6 +95,8 @@ Library
 
     if flag(stage1)
         Include-Dirs: stage1
+       if impl(ghc < 6.9)
+           Extensions: PatternSignatures
     else
         Include-Dirs: stage2plus
     Install-Includes: HsVersions.h, ghc_boot_platform.h
