ext-core library: Parser fixes; make it build with the HEAD
In the ext-core parser I guess I never tested:
* existential type variable bindings in case alts
* empty data declarations

That'll learn me!

--- a/utils/ext-core/lib/GHC_ExtCore/Makefile
+++ b/utils/ext-core/lib/GHC_ExtCore/Makefile
@@ -1,5 +1,5 @@
 all:	Handle.hs IO.hs Unicode.hs
-	../../../../compiler/ghc-inplace -c -fext-core -package-name base-extcore Handle.hs IO.hs Unicode.hs -cpp -i../
+	ghc -c -fext-core -package-name base-extcore Handle.hs IO.hs Unicode.hs -cpp -i../
 
 clean:
 	rm -f *.hcr *.hi *.o
