--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -1,6 +1,5 @@
 Name: ghc
--- XXX Version number!
-Version: 6.9
+Version: @ProjectVersion@
 Copyright: XXX
 -- License: XXX
 License-File: ../LICENSE
