--- a/libraries/ghc-prim/ghc-prim.cabal
+++ b/libraries/ghc-prim/ghc-prim.cabal
@@ -59,6 +59,6 @@ Library
         cbits/popcnt.c
         cbits/word2float.c
 
-    -- We need to set the package name to ghc-prim (without a version number)
+    -- We need to set the package key to ghc-prim (without a version number)
     -- as it's magic.
-    ghc-options: -package-name ghc-prim
+    ghc-options: -this-package-key ghc-prim
