--- a/libraries/integer-simple/integer-simple.cabal
+++ b/libraries/integer-simple/integer-simple.cabal
@@ -28,4 +28,4 @@ Library
                 UnliftedFFITypes, NoImplicitPrelude
     -- We need to set the package name to integer-simple
     -- (without a version number) as it's magic.
-    ghc-options: -package-name integer-simple -Wall
+    ghc-options: -this-package-key integer-simple -Wall
