Add .gitignore line for stage=1 testsuite generated file

--- a/testsuite/.gitignore
+++ b/testsuite/.gitignore
@@ -53,6 +53,7 @@ tmp.d
 *.so
 *bindisttest_install___dir_bin_ghc.mk
 *bindisttest_install___dir_bin_ghc.exe.mk
+mk/ghcconfig_*_inplace_bin_ghc-stage1.mk
 mk/ghcconfig_*_inplace_bin_ghc-stage2.mk
 mk/ghcconfig_*_inplace_bin_ghc-stage2.exe.mk
 *.imports
